tests/spec/type_errors/impl_dup_method.soc
// SPEC §5.1 (v0.2): E0333 — method names must be unique per type, across all
// of its impl blocks.
//? error: E0333
//? error: duplicate method `area` on `Square`
struct Square {
    side: Float,
}

impl Square {
    fn area(self) -> Float {
        self.side * self.side
    }
}

impl Square {
    fn area(self) -> Float {
        0.0
    }
}
